# futaba_gp9002a

./: CMakeLists.txt  README.rst  prj.conf
boards/: nucleo_f401re.overlay
src/: main.c
